project structure updated
